--- a/index.html
+++ b/index.html
@@ -132,6 +132,39 @@
 
     </header>
 
+    <main>
+        <section>
+            <div class="container text-center my-5">
+                <div class="row g-2">
+                    <!-- single catagory  -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-warning d-flex align-items-center justify-content-around rounded">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single catagory  -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-success d-flex align-items-center justify-content-around rounded">
+                            <h1 class="text-white">Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single catagory  -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-primary d-flex align-items-center justify-content-around rounded">
+                            <h1 class="text-white">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
