--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>panda commerce 27-nov23</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary ">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -27,17 +29,15 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#backpack">BackPack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BackPack</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
 
 
@@ -136,7 +136,7 @@
         <!-- catagori start  -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-2 catagories">
                     <!-- single catagory  -->
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="p-3 border bg-warning d-flex align-items-center justify-content-around rounded">
@@ -167,7 +167,7 @@
         <!-- catagori end  -->
 
         <!-- shoes start  -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -224,7 +224,7 @@
         <!-- shoes end  -->
 
         <!-- back pack start -->
-        <section class="container my-5">
+        <section class="container my-5 " id="backpack">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -279,6 +279,33 @@
             </div>
         </section>
         <!-- back pack end -->
+
+        <!-- subscribe start  -->
+        <section id="subscribe"
+            class="container align-items-center d-flex justify-content-center my-3 py-3 bg-pink-light rounded heights">
+
+            <div>
+
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p>
+                <form>
+                    <div class="mb-3">
+
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                    </div>
+
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+
+            </div>
+        </section>
+        <!-- subscribe end  -->
+
+        <footer class="mt-5 text-center p-2">
+            <small>©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+        </footer>
 
     </main>
 
