--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                         in
                                         front of funky world.</p>
                                     <h1>$420</h1>
-                                    <button type="button" class="btn btn-warning">Buy Now</button>
+                                    <button type="button" class="btn buy-now-btn">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -105,7 +105,7 @@
                                         in
                                         front of funky world.</p>
                                     <h1>$600</h1>
-                                    <button type="button" class="btn btn-warning">Buy Now</button>
+                                    <button type="button" class="btn buy-now-btn">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -180,7 +180,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn buy-now-btn">
                                 Buy Now
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn buy-now-btn">
                                 Buy Now
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn buy-now-btn">
                                 Buy Now
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn buy-now-btn">
                                 Buy Now
                             </div>
                         </div>
@@ -253,7 +253,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn buy-now-btn">
                                 Buy Now
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn buy-now-btn">
                                 Buy Now
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                     </div>
 
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn buy-now-btn">Submit</button>
                 </form>
 
             </div>
